crates/arity-formatter/tests/snapshots/formatter__roxygen_md_html_block_value_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @md
#' @details
#' <span>
#' folded
#'
#' after
#' @name a
NULL

#' @md
#' @details
#'   <span>
#' indent kept
#' @name b
NULL

#' @md
#' @description
#' <!-- note
#' still inside -->
#' after the closer
#' @name c
NULL
