crates/arity-formatter/tests/snapshots/formatter__roxygen_md_html_inline_forms_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Inline HTML forms reflow
#'
#' @details
#' Some leading prose that runs long enough to force a reflow around <!-- an inline comment -- with dashes -->
#' which must stay atomic.
#'
#' A processing instruction <?php echo x ?> and a CDATA section <![CDATA[raw <b> ]] text]]>
#' also reflow as single atoms, as does <!DOCTYPE html>.
#' @md
#' @name md_html_inline_forms
NULL
