crates/arity-formatter/tests/snapshots/formatter__roxygen_md_html_inline_multiline_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Bail reflow around a multi-line inline HTML span
#'
#' @details
#' a <!-- x
#' y --> b
#' short lines after
#' stay unjoined too
#'
#' this sibling paragraph still reflows normally
#' @md
#' @name a
NULL

#' Emphasis-wrapped span and a from-value opener
#'
#' @details t <span
#' class="v"> u
#'
#' *a <!-- x
#' y --> b*
#' @md
#' @name b
NULL
