crates/arity-formatter/tests/snapshots/formatter__roxygen_md_inline_reflow_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @details
#' A long paragraph with *emphasis* and **strong words** plus some `inline code`
#' that should rewrap across lines while keeping every `a + b` markup span
#' atomic.
#' @md
f <- function() NULL
