crates/arity-formatter/tests/snapshots/formatter__roxygen_md_list_lazy_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @md
#' @details
#' - item one
#' lazy continuation stays inside the atomic list passthrough
#' @name a
NULL

#' @md
#' @details
#' - value item
#' lazy continuation
#' @name b
NULL
