crates/arity-formatter/tests/snapshots/formatter__roxygen_md_list_loose_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Loose lists pass through with interior blanks intact
#'
#' @md
#' @details
#' - a
#'
#' - b
#'
#'
#' - c
#'
#' Prose separator.
#'
#' 1. one
#'
#' 5. five
#'
#' - x
#'
#'   - deep after blank
#'
#' - y
#' @note
#' - value a
#'
#' - value b
#' @name md_list_loose
NULL
