crates/arity-formatter/tests/snapshots/formatter__roxygen_md_quote_break_value_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @md
#' @details
#' > quoted line
#' > second line
#' lazy continuation
#' @name a
NULL

#' @md
#' @details
#' ***
#' after break
#' @name b
NULL

#' @md
#' @details
#' - - -
#' after spaced dashes
#' @name c
NULL
