crates/arity-formatter/tests/snapshots/formatter__roxygen_md_table_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' | a | b |
#' |:--|--:|
#' | 1 | 2 |
#' @name x
NULL
