crates/arity-formatter/tests/snapshots/formatter__roxygen_normalize_space_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' no space extra spaces
f <- function(x) x
