crates/arity-formatter/tests/snapshots/formatter__roxygen_rd_block_macro_opener_flush_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
#' Area-proportional Euler diagrams
#'
#' @return
#' A list object of class `'euler'` with the following parameters.
#' \item{ellipses}{for `shape = "circle"` and `shape = "ellipse"` fits,
#'     the legacy 5-column data frame of `h`, `k`, `a`, `b`, `phi`.}
#' \item{original.values}{set relationships in the input, as a named vector}
#' \item{residuals}{residuals of the fit, one per disjoint set intersection}
#' \item{regionError}{the difference in percentage points between each
#'     disjoint subset in the input and the respective area in the output}
#'
#' @export
f <- function() {}
